Set up AWS infrastructure, CI/CD pipeline, and codebase cleanup
  Deployed to AWS ECS Fargate with RDS PostGIS, ALB, ACM HTTPS, Route 53,
  and Secrets Manager via Terraform. Added GitHub Actions CI/CD pipeline
  that runs tests and deploys to ECS on push to main. Fixed multiple issues
  found during code review including rate limiter X-Forwarded-For handling,
  polygon closed validation, email service interface injection, pagination
  in geo-fence alert scheduler, and YAML misconfiguration causing Anthropic
  API key to not resolve in production.