@@ -8,15 +8,16 @@ import org.locationtech.jts.geom.Polygon;
 import org.locationtech.jts.geom.PrecisionModel;
 import java.util.List;
 import java.util.Arrays;
-import java.util.stream.Collectors;
 import com.wildtrack.model.GeoFence;
 import com.wildtrack.dto.GeoFenceDto;
 
+// IGNORE policy is intentional — DTOs deliberately expose a subset of entity fields
 @Mapper(
         componentModel = MappingConstants.ComponentModel.SPRING,
         unmappedTargetPolicy = ReportingPolicy.IGNORE
 )
 public interface GeoFenceMapper {
+    GeometryFactory GEOMETRY_FACTORY = new GeometryFactory(new PrecisionModel(), 4326);
 
     @BeanMapping(nullValuePropertyMappingStrategy = NullValuePropertyMappingStrategy.IGNORE)
     @Mapping(target = "id", ignore = true)
@@ -30,11 +31,11 @@ public interface GeoFenceMapper {
     @Mapping(target = "area", expression = "java(coordinatesToPolygon(geoFenceDto.getCoordinates()))")
     GeoFence toEntity(GeoFenceDto geoFenceDto);
 
+    @SuppressWarnings("squid:S1168")
     default List<CoordinateDto> polygonToCoordinates(Polygon polygon) {
-    if (polygon == null) return null;
+    if (polygon == null) return null; // null is intentional — MapStruct uses null to skip field mapping
     return Arrays.stream(polygon.getCoordinates())
-            .map(coord -> new CoordinateDto(coord.y, coord.x))
-            .collect(Collectors.toList());
+            .map(cord -> new CoordinateDto(cord.y, cord.x)).toList();
     }
 
     default Polygon coordinatesToPolygon(List<CoordinateDto> coordinates) {
@@ -42,7 +43,7 @@ public interface GeoFenceMapper {
     Coordinate[] coords = coordinates.stream()
             .map(c -> new Coordinate(c.lon(), c.lat()))
             .toArray(Coordinate[]::new);
-    return new GeometryFactory(new PrecisionModel(), 4326).createPolygon(coords);
+    return GEOMETRY_FACTORY.createPolygon(coords);
 }
 
 }
